adjusted the scroll margin top for each section so that the jump links for the fixed header appears in the exact same spot as if the header wasn't fixed

--- a/Resources/styles.css
+++ b/Resources/styles.css
@@ -197,6 +197,7 @@ main section {
     -ms-flex-direction: column;
     flex-direction: column;
     position: relative;
+    scroll-margin-top: 5.25rem;
 
     margin: 117.9px 25px 0px;
     padding: 20px;
